--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -504,7 +504,7 @@
 }
 
 /* .site-menu-main .sub-menu--item:hover > a {
-  color: var(--accent-color);
+  color: #e04e39;
 } */
 
 @media (min-width: 992px) {
