--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,11 +8,11 @@
 {
 --heading-color: #001A3D;
 --body-color: #4D5B68;
---accent-color: #2920D2;
+--accent-color: #e04e39;
 --accent-color2: #2BC8EB;
 --white-color: #ffffff;
 --white-bg: #ffffff;
---accent-bg: #2920D2;
+--accent-bg: #e04e39;
 --accent-bg2: #2BC8EB;
 --accent-bg3: #0256FE;
 --light-color: #F7F7F7;
